--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,4 @@
 # These are supported funding model platforms
 
-github: [Pandaxyz-xd]
+github: [Pandaxyz-xd, PandaxyzzzAchievements]
 custom: https://github-pandaxyz.netlify.app/
